--- a/Akasi/package.json
+++ b/Akasi/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
     "moment-timezone": "^0.5.45",
     "nuxt": "^3.13.0",
     "vue": "latest",
