--- a/Akasi/package.json
+++ b/Akasi/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@nuxtjs/google-fonts": "^3.2.0",
+    "@prisma/client": "^5.20.0",
     "moment-timezone": "^0.5.45",
     "nuxt": "^3.13.0",
+    "prisma": "^5.20.0",
     "vue": "latest",
     "vue-router": "latest"
   },
