--- a/Akasi/Frontend/tsconfig.json
+++ b/Akasi/Frontend/tsconfig.json
@@ -1,16 +1,37 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
+  // Extend the Nuxt TypeScript configuration
   "extends": "./.nuxt/tsconfig.json",
+  
   "compilerOptions": {
-      "typeRoots": ["./node_modules/@types", "./src/types"],
-      "module": "ESNext", // or "CommonJS" based on your needs
-      "target": "ES2020", // Set your target ECMAScript version
-      "strict": true, // Enable all strict type-checking options
-      "esModuleInterop": true, // Allows default imports from modules with no default export
-      "skipLibCheck": true, // Skip type checking of declaration files
-      "forceConsistentCasingInFileNames": true, // Ensure consistent file naming
-      "moduleResolution": "node",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "jsx": "preserve",
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "lib": ["ESNext", "DOM"],
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["./*"],
+      "@/*": ["./*"]
+    }
   },
-  "include": ["utils/**/*"], // Adjust based on where your TypeScript files are
-  "exclude": ["node_modules", "**/*.spec.ts"] // Exclude tests and dependencies
+  
+  "include": [
+    "./**/*.ts",
+    "./**/*.tsx",
+    "./**/*.vue",
+    ".nuxt/nuxt.d.ts",
+    "./*.ts"
+  ],
+  
+  "exclude": [
+    "node_modules",
+    "dist",
+    ".output",
+    "**/*.spec.ts"
+  ]
 }
