--- a/Akasi/Backend/package.json
+++ b/Akasi/Backend/package.json
@@ -20,14 +20,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.15.0",
     "@nestjs/common": "^10.4.8",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.8",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.15",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
+    "googleapis": "^144.0.0",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
