--- a/Akasi/Backend/.gitignore
+++ b/Akasi/Backend/.gitignore
@@ -54,3 +54,8 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Google credentials
+/credentials/*.json
+/credentials/*-key.json
+credentials.json
